--- a/config/translations/en.json
+++ b/config/translations/en.json
@@ -1,7 +1,7 @@
 {
   "home": "Home",
-  "hello": "Gatsby multi-language starter",
-  "subline": "Internationalization / i18n without third party plugins or packages for Posts and Pages. Different URLs dependending on the language. Focused on SEO, PWA, Image Optimization, Styled Components and more. This starter is also integrate with Netlify CMS to manage all pages, posts and images.",
+  "hello": "Kota's Blog",
+  "subline": "Hi! I am Kota Kawaguchi who is Japanese Software Engineer. My main field is Backend/DEV-OPS/Cloud/Data Engineering",
   "latestPosts": "Latest posts",
   "category": "Category",
   "allPosts": "All Posts",
@@ -9,9 +9,6 @@
   "next": "Next",
   "prev": "Prev",
   "of": "of",
-  "button": "Button",
-  "aboutProject": "Iceberg Gatsby is a PWA, save it for offline reading.",
-  "seeMorePWA": "See more PWA here",
   "maintainedBy": "Maintained by",
   "licenseDisplay": "© 2022 Kota Kawaguchi "
 }
