--- a/config/translations/jp.json
+++ b/config/translations/jp.json
@@ -1,17 +1,14 @@
 {
-  "home": "Início",
-  "hello": "Site multilíngue em Gatsby",
-  "subline": "Internacionalização / i18n sem plugins ou pacotes de terceiros para Posts e Páginas. URLs diferentes dependendo do idioma. Foco em SEO, PWA, Otimização de imagens, Styled Components e muito mais. Esse starter também é integrado ao Netlify CMS para gerenciar todas as páginas, posts e imagens.",
-  "latestPosts": "Útimos posts",
-  "category": "Categoria",
-  "allPosts": "Todos os Posts",
-  "toRead": "de leitura",
-  "next": "Próximo",
-  "prev": "Anterior",
-  "of": "de",
-  "button": "Botão",
-  "aboutProject": "Iceberg Gatsby é um PWA, salve o site em sua homescreen para vê-lo offline.",
-  "seeMorePWA": "Leia mais sobre PWA aqui",
-  "maintainedBy": "Projeto mantido por",
-  "licenseDisplay": "Você sempre poderá contribuir com esse projeto no"
+  "home": "ホーム",
+  "hello": "Kota's Blog",
+  "subline": "テック関連の記事、雑多なブログ、カナダ移住関連の話など",
+  "latestPosts": "Latest posts",
+  "category": "Category",
+  "allPosts": "All Posts",
+  "toRead": "to read",
+  "next": "Next",
+  "prev": "Prev",
+  "of": "of",
+  "maintainedBy": "Maintained by",
+  "licenseDisplay": "© 2022 Kota Kawaguchi "
 }
