--- a/config/translations/en.json
+++ b/config/translations/en.json
@@ -1,7 +1,7 @@
 {
   "home": "Home",
   "hello": "Kota's Blog",
-  "subline": "Hi! I am Kota Kawaguchi who is Japanese Software Engineer. My main field is Backend/DEV-OPS/Cloud/Data Engineering",
+  "subline": "Hi! I am Kota Kawaguchi who is Japanese Software Engineer. My main field is Backend/DEV-OPS/Cloud/Data Engineering.",
   "latestPosts": "Latest posts",
   "category": "Category",
   "allPosts": "All Posts",
