--- a/blog/2022-04-21-linebot.en.md
+++ b/blog/2022-04-21-linebot.en.md
@@ -76,7 +76,7 @@ As for usage, after adding a Line friend, you can add and delete TODOs on the ta
 
 ## System configuration diagram
 
-<img width="700" alt="architecture_linebot.svg" src="https://raw.githubusercontent.com/kotaaaa/linebot/master/architecture_linebot.drawio.svg">
+![architecture_linebot.svg](https://raw.githubusercontent.com/kotaaaa/linebot/master/architecture_linebot.drawio.svg)
 
 We built a 3-tier system where App server, Web server, and DB server are set up on separate `Pod` (containers).
 The communication between the `Services` uses `metadata` and name resolution inside Kubernetes.
